2005-02-17  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-settings-multimedia-keys.c: (do_www_action):
	Don't set any url when starting browser.

2005-02-09  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-keyboard-xkb.c: (gnome_settings_chk_file_list):
	patch by Kjartan Maraas <kmaraas@gnome.org> to fix a leak
	(Closes: #166796).

2005-02-03  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: fix #165018

2005-02-01  Elijah Newren  <newren@gmail.com>

	* gnome-settings-xmodmap.h:
	* gnome-settings-xmodmap.c:

	Don't forget to use 'cvs add' in order to add new files to the
	repository.  :)  (See #143487)

2005-01-29  Shakti Sen  <shprasad@novell.com>
	
	* gnome-settings-keyboard-xkb.c 
	(gnome_settings_keyboard_xkb_chk_lcl_xmm): Calls the modmap load
	dialog.
	* gnome-settings-daemon.c (gnome_settings_daemon_new):
	Loads the modmap files.
	* gnome-settings-xmodmap.h: Added newly
	* gnome-settings-xmodmap.c: Also added newly which handles the modmap
	settings.
	* modmap-dialog.glade: Added newly.

	Solved bug #143487

2005-01-12  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-accessibility-keyboard.c: (warning_dialog_post): 
	patch from John Spray <jcs116@york.ac.uk> to use the style described 
	in the HIG for the titles (Closes: #163653).

2005-01-08  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: fix #163299

2005-01-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-mouse.c: (set_locate_pointer): add Mod2Mask and 
	Mod4Mask to the modifiers, fix the issue with Numlock activated 
	(Closes: #149383).

2005-01-07  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: optimization - only update the 
	configuration when necessary

2005-01-04  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnome-settings-multimedia-keys.c: (execute):  use g_spawn_sync() 
	and g_spawn_async() to define the working directory.
	
2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>
